# tpu-mlir

./: .gitignore  build.sh
docs/developer_manual/: ADA300_TOP_TPU_DIALECT_DESIGN.md  layer_group.md  qwen3_5_llm_convert_pipeline.md  tpu-mlir-layer_group.md
docs/npu_dialect/: 01 总体流程.md  03 import-quant-info.md  04 lowering.md  07 memory-alloc.md  08 codgen.md  09 rxmodel.md  10 ada300-llm-lowering-pipeline.md  ada300-llm-lowering-pipeline.md
docs/npu_dialect/06 layergroup/: 07 layer-group-architecture.md  07 layer-group.md
examples/Ada300/: CMakeLists.txt  README.md  ada300-baremetal-main.c  ada300-import.py  ada300-rxops-main.cpp  model.py  rx_ops_bridge.c  rx_ops_bridge.h  rx_ops_bridge_ada300.c
examples/Ada300-hetero/: CMakeLists.txt  README.md  ada300-import.py  rx_ops_bridge.c  rx_ops_bridge.h
examples/Ada300-hetero/cmake/: run-ada300-hetero.sh.in
examples/Ada300-hetero/device/: ada300-hetero-main.c  hetero_shmem_device.c
examples/Ada300-hetero/host/: ada300-hetero-main.cpp  hetero_shmem_host.c
examples/Ada300-hetero/include/: hetero_shmem.h
examples/Ada300-hetero/output/: subgraph0_rxops.bc  subgraph0_rxops.ll  subgraph0_rxops.mlir  subgraph0_rxops_finished.mlir  subgraph0_top.mlir  subgraph0_top_weight.npz
examples/tiny_llm/: CMakeLists.txt  README.md  extract_mlir_pass_ir.py  rx_ops_bridge_ada300_compat.c  rxops_ada300_tensor_utils_stub.c  rxops_c_init_stub.c  rxops_tiny_ada300_setup.c  tiny_llm_baremetal_main.c
examples/tiny_llm/mlir/: block_7.mlir  embedding.mlir  lm_head.mlir
examples/tiny_llm/output/: block_7_rxops.ll  block_7_rxops.mlir  block_7_rxops.mlir.deinit.mlir  block_7_rxops_bufferize.mlir  block_7_rxops_finished.mlir  block_7_top.mlir  block_7_top_assigned.mlir  block_7_tpu.mlir  block_7_tpu_addr.mlir  block_cache_7_rxops.ll  block_cache_7_rxops.mlir  block_cache_7_rxops_bufferize.mlir  block_cache_7_rxops_finished.mlir  block_cache_7_top.mlir  block_cache_7_top_assigned.mlir  block_cache_7_tpu.mlir  block_cache_7_tpu_addr.mlir  embedding_cache_rxops.ll  embedding_cache_rxops.mlir  embedding_cache_rxops_bufferize.mlir  embedding_cache_rxops_finished.mlir  embedding_cache_top_assigned.mlir  embedding_cache_tpu.mlir  embedding_cache_tpu_addr.mlir  embedding_rxops.ll  embedding_rxops.mlir  embedding_rxops.mlir.deinit.mlir  embedding_rxops_bufferize.mlir  embedding_rxops_finished.mlir  embedding_top.mlir  embedding_tpu.mlir  embedding_tpu_addr.mlir  lm_head_rxops.ll  lm_head_rxops.mlir  lm_head_rxops.mlir.deinit.mlir  lm_head_rxops_bufferize.mlir  lm_head_rxops_finished.mlir  lm_head_top.mlir  lm_head_top_assigned.mlir  lm_head_tpu.mlir  (+1 more)
include/tpu_mlir/Backend/: Device.h
include/tpu_mlir/Conversion/: Conversion.h  Passes.td
include/tpu_mlir/Support/: Module.h  Module.td
lib/: CMakeLists.txt
lib/Backend/: Arch.cpp  CMakeLists.txt  Device.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/TopToTpu/: CMakeLists.txt  LoweringAda300.cpp  TopToTpuPass.cpp
lib/Conversion/TpuToRxOps/: CMakeLists.txt  TpuToRxOpsPass.cpp
lib/Dialect/Tpu/: CMakeLists.txt
lib/Support/: Module.cpp
python/llm/: LlmConverter.py  Qwen3_5Converter.py
qwen3.5_2b/config/: README.md  config.json  generation_config.json  quantization_config.json  tokenizer_config.json
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/: task.txt
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_0/: block_0.mlir  block_0_bm1684x_w4bf16.layer_group_cache.json  block_0_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_1/: block_1.mlir  block_1_bm1684x_w4bf16.layer_group_cache.json  block_1_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_10/: block_10.mlir  block_10_bm1684x_w4bf16.layer_group_cache.json  block_10_bm1684x_w4bf16_final.mlir  block_10_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_11/: block_11.mlir  block_11_bm1684x_w4bf16.layer_group_cache.json  block_11_bm1684x_w4bf16_final.mlir  block_11_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_12/: block_12.mlir  block_12_bm1684x_w4bf16.layer_group_cache.json  block_12_bm1684x_w4bf16_final.mlir  block_12_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_13/: block_13.mlir  block_13_bm1684x_w4bf16.layer_group_cache.json  block_13_bm1684x_w4bf16_final.mlir  block_13_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_14/: block_14.mlir  block_14_bm1684x_w4bf16.layer_group_cache.json  block_14_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_15/: block_15.mlir  block_15_bm1684x_w4bf16.layer_group_cache.json  block_15_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_16/: block_16.mlir  block_16_bm1684x_w4bf16.layer_group_cache.json  block_16_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_17/: block_17.mlir  block_17_bm1684x_w4bf16.layer_group_cache.json  block_17_bm1684x_w4bf16_final.mlir  block_17_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_18/: block_18.mlir  block_18_bm1684x_w4bf16.layer_group_cache.json  block_18_bm1684x_w4bf16_final.mlir  block_18_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_19/: block_19.mlir  block_19_bm1684x_w4bf16.layer_group_cache.json  block_19_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_2/: block_2.mlir  block_2_bm1684x_w4bf16.layer_group_cache.json  block_2_bm1684x_w4bf16_final.mlir  block_2_bm1684x_w4bf16_tpu.mlir
qwen3.5_2b/qwen3.5-2b-int4-autoround_w4bf16_seq2048_bm1684x_1dev_dynamic/block_20/: block_20.mlir  block_20_bm1684x_w4bf16.layer_group_cache.json  (+2 more)
(+294 files in other folders)
